welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:6: error: '<-' expected but ')' found.
for (nbPas>0) {
            ^Program:10: error: illegal start of simple expression
	}
        ^