welcome.lessons.welcome.loopfor.LoopFor.scala.code
var nbPas:Int=0
while (!estSurBiscuit()) {
  avance()
  nbPas=nbPas+1
}
for (nbPas>0) {
  recule()
}